syntax = "proto3";

message Order {
    string id = 1;
	string username = 2;
	string paketBelajarName = 3;
	float total = 4;
	string paymentMethod = 5;
	string createdAt = 6;
	string updatedAt = 7;
}

message OrderResponse { 
	string id = 1;
	string username = 2;
	string paketBelajarName = 3;
	float total = 4;
	string paymentMethod = 5;
	string createdAt = 6;
	string updatedAt = 7;
}

message Empty {}

message OrderResponseList {
    repeated OrderResponse order = 1;
}